src/browser-frontend/views/browser/chrome/tabbar.css
/*
Copyright 2016 Mozilla

Licensed under the Apache License, Version 2.0 (the "License"); you may not use
this file except in compliance with the License. You may obtain a copy of the
License at http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software distributed
under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
CONDITIONS OF ANY KIND, either express or implied. See the License for the
specific language governing permissions and limitations under the License.
*/

.tabbar {
  overflow: hidden;
  height: var(--theme-tabbar-height);
  box-sizing: border-box;
  flex: 1;
  padding: 0 10px 0 40px;
  padding-top: var(--theme-tabbar-top-padding);
  background: var(--theme-tabbar-background);
}

.tabbar.darwin {
  margin-right: 40px;
  margin-left: 70px;
}

.tabbar.linux,
.tabbar.win32 {
  margin-right: 70px;
}

